--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@nestjs/common": "^8.0.0",
     "@nestjs/core": "^8.0.0",
     "@nestjs/platform-express": "^8.0.0",
+    "@vendia/serverless-express": "^4.3.11",
     "aws-lambda": "^1.0.6",
     "aws-serverless-express": "^3.4.0",
     "reflect-metadata": "^0.1.13",
