--- a/serverless.yml
+++ b/serverless.yml
@@ -10,7 +10,7 @@ provider:
 
 functions:
   main:
-    handler: dist/main.handler
+    handler: dist/sls-main.handler
     events:
       - http:
           method: ANY
