--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,4 +37,4 @@ jobs:
         run: npm run test
         
       - name: Run e2e tests
-        run: npm run est:e2e
+        run: npm run test:e2e
